# redact-haskell

./: .gitignore  CHANGELOG.md  LICENSE  LibOA.hs  Makefile  README.md  VENDOR.md  cabal-8.2.2.project  cabal-9.4.5.project  cabal-bounds-lower.project  cabal-bounds-upper.project  cabal.project  default.nix  example.md  nix.md  redact.cabal  redact.hs  shell.nix  stack-8.10.2.yaml  stack-8.10.3.yaml  stack-8.10.4.yaml  stack-8.10.7.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.0.1.yaml  stack-9.0.2.yaml  stack-9.10.1.yaml  stack-9.12.1.yaml  stack-9.2.1.yaml  stack-9.2.2.yaml  stack-9.2.7.yaml  stack-9.2.8.yaml  stack-9.4.2.yaml  stack-9.4.4.yaml  stack-9.4.5.yaml  stack-9.4.6.yaml  stack-9.4.7.yaml  stack-9.4.8.yaml  stack-9.6.1.yaml  stack-9.6.2.yaml  (+9 more)
.github/workflows/: ci.yml
app/: LibOA.hs  Main.hs
doc/: redact.1  redact.1.md
pkg/deb/: control  copyright
project/: TODO.md
project/log/: 20201128-design.md
project/release/: redact-haskell-0.1.0.0.md  redact-haskell-0.2.0.0.md  redact-haskell-0.2.0.1.md  redact-haskell-0.3.0.0.md  redact-haskell-0.4.0.0.md  redact-haskell-0.5.0.0.md  redact-haskell-0.6.0.0.md
src/: Redact.hs
src/Redact/: Internal.hs  Markdown.hs  Types.hs
src/Redact/Monad/: Handle.hs  Terminal.hs
test/: Spec.hs  TestLib.hs
test/Redact/Markdown/: Mock.hs  Test.hs
test/Redact/Monad/Terminal/: Mock.hs
